# http-mock-server

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  cloudbuild.yml  docker-compose.yml  index.html  mock_data.json  request.sh  test.sh
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: rust.yml
examples/: index.html
routes/: Cargo.toml
routes/src/: lib.rs
src/: account.rs  config.rs  log.rs  main.rs  server.rs
src/controllers/: home_controller.rs  mock_controller.rs
src/database/: db.rs
src/services/: match_mock.rs  mock.rs  test_mock_data.json
src/utils/: util_strings.rs
