[package]
name = "rust_project"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
mysql = "22.2.0"
serde = "1.0.144"
serde_json = "1.0.85"
routes = { path = "routes" }

[dev-dependencies]
rustfmt = "0.10.0"
